Add more YouTube 8K VP9 resolutions to Windows DXVA decoder.

Probably many decoders will support 8192x4320, but I don't know how
many will support 8192x8192 (which YT confirmed as cap), so add both.

BUG=905543
TEST=none
R=tmathmeyer

Change-Id: Ifc28dafeaf8a4dcd4d8e7be2be3cd48ee5ee6ccb
Reviewed-on: https://chromium-review.googlesource.com/c/1404404
Reviewed-by: Ted Meyer <tmathmeyer@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621451}
Former-commit-id: 4e07c7d635e307fe51188ba2398346a8e2a9cfbb